edición css contacts

--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
             <div class="active"> <!-- Bloque María -->
                 <div class="photo"> <!-- Foto del perfil de María -->
                     <img src="assets/imgs/maria.jpg" alt="maria">
-                </div> 
-                <div class="status"> <!-- Estado de María -->
-                <h3>María</h3>
-                <p>Activo ahora</p>
                 </div>
-                <div class="icons">
-                    <i class="fa-regular fa-message"></i>
-                    <i class="fa-solid fa-bars"></i>
+                <div>
+                    <div class="status"> <!-- Estado de María -->
+                        <h3>María</h3>
+                        <p>Activo ahora</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="icons">
+                        <i class="fa-regular fa-message"></i>
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
                 </div>
             </div>
             <div class="button"> <!-- Botón nuevo chat -->
@@ -109,7 +113,8 @@
         <div class="principal"> <!-- Bloque derecho -->
             <img src="assets/imgs/hand.png" alt="manos">
             <h1>Comienza el Networking</h1>
-            <p>Presiona el botón <strong>"Nuevo chat"</strong> para comenzar a crear nuevas redes de contacto para tu empresa o emprendimiento.</p>
+            <p>Presiona el botón <strong>"Nuevo chat"</strong> para comenzar a crear nuevas redes de contacto para tu
+                empresa o emprendimiento.</p>
         </div>
     </div>
 </body>
