aplicación de colores, fuente, bordes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/ba0aa31ab5.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,100&display=swap" rel="stylesheet"> 
+    <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
+ 
     <title>Sistema de mensajería</title>
 </head>
 
@@ -26,8 +31,8 @@
                 </div>
                 <div>
                     <div class="icons">
-                        <i class="fa-regular fa-message"></i>
-                        <i class="fa-solid fa-bars"></i>
+                        <i class="fa-regular fa-message fa-2x"></i>
+                        <i class="fa-solid fa-bars fa-2x"></i>
                     </div>
                 </div>
             </div>
@@ -42,7 +47,7 @@
                     </div>
                     <div class="text">
                         <h3>Juanita</h3>
-                        <p>Hola! cómo estas?</p>
+                        <p>¿Cómo estas?</p>
                     </div>
                 </div>
                 <div class="user"> <!-- Alberto -->
@@ -60,7 +65,7 @@
                     </div>
                     <div class="text">
                         <h3>Ignacio</h3>
-                        <p>Chau</p>
+                        <p>Chau <i class="em em-v" aria-role="presentation" aria-label="VICTORY HAND"></i></p>
                     </div>
                 </div>
                 <div class="user"> <!-- Cristian -->
@@ -113,7 +118,8 @@
         <div class="principal"> <!-- Bloque derecho -->
             <img src="assets/imgs/hand.png" alt="manos">
             <h1>Comienza el Networking</h1>
-            <p>Presiona el botón <strong>"Nuevo chat"</strong> para comenzar a crear nuevas redes de contacto para tu
+            <p>Presiona el botón <strong>"Nuevo chat"</strong> para comenzar a crear </p>
+               <p> nuevas redes de contacto para tu
                 empresa o emprendimiento.</p>
         </div>
     </div>
